--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -9,7 +9,7 @@
     <title th:replace="${title}"></title>
 
     <link rel="stylesheet" th:href="@{/webjars/materializecss/css/materialize.min.css}">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- lib js -->
     <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
