--- a/src/main/resources/static/css/login-toast.css
+++ b/src/main/resources/static/css/login-toast.css
@@ -1,4 +1,6 @@
 #toast-container {
+    margin-left: auto !important;
+    margin-right: auto !important;
     top: auto !important;
     right: auto !important;
     bottom: 30%;
