--- a/src/main/resources/templates/admin/user/add.html
+++ b/src/main/resources/templates/admin/user/add.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<header th:replace="fragments/header :: header(users, admin)"></header>
+<header th:replace="fragments/header :: header(user, admin)"></header>
 
 <div class="form-body big-form">
     <nav class="breadcrumb-nav">
@@ -29,31 +29,26 @@
             <legend>Данные пользователя</legend>
             <div class="col s4">
                 <div class="input-field">
-                    <input id="surname" name="surname" type="text"  class="required validate"
-                           maxlength="100" th:field="${user.surname}"/>
-                    <label for="surname">Фамилия</label>
-                </div>
-                <div class="input-field">
                     <input id="name" name="name" type="text"
-                           th:field="${user.name}" class="required validate" maxlength="100"/>
+                           th:field="${user.firstName}" class="required validate" maxlength="100"/>
                     <label for="name">Имя</label>
                 </div>
                 <div class="input-field">
-                    <input id="second-name" name="secondName" type="text"
-                           maxlength="100" th:field="${user.secondName}"/>
-                    <label for="second-name">Отчество</label>
+                    <input id="second-name" name="lastName" type="text"
+                           maxlength="100" th:field="${user.lastName}"/>
+                    <label for="second-name">Фамилия</label>
                 </div>
             </div>
             <div class="col s4">
                 <div class="input-field">
                     <input id="login" name="login"
-                           maxlength="20"
+                           maxlength="50"
                            type="text"  class="required validate" th:field="${user.login}"/>
                     <label for="login">Логин</label>
                 </div>
                 <div class="input-field">
                     <input id="email" name="email"
-                           maxlength="256" class="required email validate" type="email" th:field="${user.mail}"/>
+                           maxlength="150" class="required email validate" type="email" th:field="${user.email}"/>
                     <label for="email">Электронная почта</label>
                 </div>
                 <div class="input-field">
@@ -68,47 +63,23 @@
             </div>
             <div class="col s4">
                 <div class="input-field">
-                    <input type="password" id="password" name="password"  class="required validate" maxlength="20"/>
+                    <input type="password" id="password" name="password"  class="required validate" maxlength="32"/>
                     <label for="password">Пароль</label>
                 </div>
                 <div class="input-field">
                     <input type="password" id="confirmPassword"
-                           name="confirmPassword"  class="required validate" maxlength="20"/>
+                           name="confirmPassword"  class="required validate" maxlength="32"/>
                     <label for="confirmPassword">Повторите пароль</label>
-                </div>
-                <div class="input-field">
-                    <select id="ldaps" th:field="${user.idLdap}" name="idLdap">
-                        <option th:value="${null}">Внутренний</option>
-                        <option th:each="r : ${ldaps}"
-                                th:value="${r.id}"
-                                th:text="${r.name}"></option>
-                    </select>
-                    <label for="ldaps">Метод авторизации</label>
                 </div>
             </div>
             <div class="buttons-area col s12">
-                <button type="button" class="waves-effect waves-light btn" onclick="UserController.addUserEvent()">Добавить</button>
+                <button type="button" class="waves-effect waves-light btn" onclick="UserController.add">Добавить</button>
             </div>
             <div class="col s12">
                 <div th:replace="fragments/error :: errorFragment"></div>
             </div>
         </fieldset>
     </form>
-</div>
-
-<div id="ldap-modal" class="modal">
-    <div class="modal-content">
-        <h4>Выберите ldap-сервер, для добавления пользователя</h4>
-        <div class="input-field">
-            <select id="ldap-list"></select>
-            <label for="ldap-list">LDAP-сервер</label>
-        </div>
-    </div>
-    <div class="modal-footer">
-        <a class="modal-action modal-close waves-effect waves-light btn-flat btn-cancel">Отмена</a>
-        <a id="confirm-btn" class="modal-action modal-close waves-effect waves-light btn-flat"
-           onclick="UserController.addUser()">Принять</a>
-    </div>
 </div>
 
 <div th:replace="fragments/error :: errorModalFragment"></div>
