--- a/src/main/resources/templates/admin/user/add.html
+++ b/src/main/resources/templates/admin/user/add.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/form.css}"/>
 
     <script th:src="@{/static/js/validate_fields.js}"></script>
-    <script th:src="@{/static/js/admin/user/user-service.js}"></script>
-    <script th:src="@{/static/js/admin/user/user-controller.js}"></script>
+    <script th:src="@{/static/js/admin/users/service.js}"></script>
+    <script th:src="@{/static/js/admin/users/controller.js}"></script>
 </head>
 
 <body>
 <header th:replace="fragments/header :: header(user, admin)"></header>
-
 <div class="form-body big-form">
     <nav class="breadcrumb-nav">
         <div class="nav-wrapper">
@@ -73,7 +72,7 @@
                 </div>
             </div>
             <div class="buttons-area col s12">
-                <button type="button" class="waves-effect waves-light btn" onclick="UserController.add">Добавить</button>
+                <button type="button" class="waves-effect waves-light btn" onclick="UserController.addUser()">Добавить</button>
             </div>
             <div class="col s12">
                 <div th:replace="fragments/error :: errorFragment"></div>
