--- a/src/main/resources/templates/admin/user/edit.html
+++ b/src/main/resources/templates/admin/user/edit.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" th:href="@{/static/css/form.css}"/>
 
     <script th:src="@{/static/js/validate_fields.js}"></script>
-    <script th:src="@{/static/js/admin/users/user-service.js}"></script>
-    <script th:src="@{/static/js/admin/users/user-controller.js}"></script>
+    <script th:src="@{/static/js/admin/users/service.js}"></script>
+    <script th:src="@{/static/js/admin/users/controller.js}"></script>
 </head>
 <body>
 <header th:replace="fragments/header :: header(user, admin)"></header>
 
-<div th:replace="fragments/card/user :: userFields('admin/users/')"></div>
+<div th:replace="fragments/card/user :: userFields('/admin/users')"></div>
 
 </body>
 </html>
