--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sd="http://www.thymeleaf.org/spring-data"
       xmlns="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/head :: head(~{::title},~{::link}, ~{::script})">
     <title>Реестр пользователей</title>
@@ -12,69 +11,72 @@
 </head>
 <body>
 <header th:replace="fragments/header :: header(user, admin)"></header>
+<main class="container">
+    <div class="row">
+        <div class="col s12">
+            <div class="card-panel">
+                <form th:action="@{/admin/users}" method="get" th:object="${filter}">
+                    <div th:replace="fragments/filter :: filter('/admin/users/add', '/admin/users',  'Реестр пользователей')"></div>
+                    <div th:class="${'filter-content '+ (filter.isFilterExist() ? 'filter-open' : '')}">
+                        <div class="row row-eq-height">
+                            <div class="col s3">
+                                <div class="input-field select-form">
+                                    <select th:field="*{role}">
+                                        <option th:value="${null}">Все</option>
+                                        <option th:each="r : ${roles}"
+                                                th:value="${r.toString()}"
+                                                th:text="${r.getStringName()}"></option>
+                                    </select>
+                                    <label>Роль</label>
+                                </div>
+                            </div>
+                            <div class="col s3">
+                                <div class="input-field select-form">
+                                    <select th:field="*{status}">
+                                        <option th:value="${null}">Все</option>
+                                        <option th:each="s : ${statuses}"
+                                                th:value="${s.toString()}"
+                                                th:text="${s.getStringName()}"></option>
+                                    </select>
+                                    <label>Статус:</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="card">
+                <table class="bordered responsive-table">
+                    <thead>
+                    <tr>
+                        <th>ФИО</th>
+                        <th>Логин</th>
+                        <th>Почта</th>
+                        <th>Роль</th>
+                        <th>Последняя активность</th>
+                        <th>Статус</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:class="${user.isActive()} ? 'clickable' : 'clickable inactive-row'"
+                        th:each="user : ${page.items}"
+                        th:onclick="'request(\'' + @{|/admin/users/${user.id}|}+ '\');'">
+                        <td th:text="|${user.getFullName()}|"></td>
+                        <td th:text="${user.login}"></td>
+                        <td th:text="${user.email}"></td>
+                        <td th:text="${user.role!=null ? user.role.getStringName() : ''}"></td>
+                        <td th:text="|${#dates.format(user.dateLastOnline,'dd.MM.yyyy HH:mm')}|"></td>
+                        <td th:text="${user.status.getStringName()}"></td>
+                    </tr>
+                    </tbody>
+                </table>
 
-<div class="col s12 main-container">
-    <form th:action="@{/admin/users}" method="get" th:object="${filter}">
-        <div class="filter-area">
-            <div th:replace="fragments/filter :: filter('/admin/users/add', '/admin/users',  'Реестр пользователей')"></div>
-            <div th:class="${'filter-content '+ (filter.isFilterExist() ? 'filter-open' : '')}">
-                <div class="row row-eq-height">
-                    <div class="col s3">
-                        <div class="input-field select-form">
-                            <select th:field="*{role}">
-                                <option th:value="${null}">Все</option>
-                                <option th:each="r : ${roles}"
-                                        th:value="${r.toString()}"
-                                        th:text="${r.getStringName()}"></option>
-                            </select>
-                            <label>Роль</label>
-                        </div>
-                    </div>
-                    <div class="col s3">
-                        <div class="input-field select-form">
-                            <select th:field="*{status}">
-                                <option th:value="${null}">Все</option>
-                                <option th:each="s : ${statuses}"
-                                        th:value="${s.toString()}"
-                                        th:text="${s.getStringName()}"></option>
-                            </select>
-                            <label>Статус:</label>
-                        </div>
-                    </div>
+                <div th:if="${page.total > 1}" class="card-content page-info">
+                    <div th:replace="fragments/pagination :: pagination"></div>
                 </div>
             </div>
         </div>
-    </form>
-    <div class="table-area">
-        <table class="bordered">
-            <thead>
-            <tr>
-                <th>ФИО</th>
-                <th>Логин</th>
-                <th>Почта</th>
-                <th>Роль</th>
-                <th>Последняя активность</th>
-                <th>Статус</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:class="${user.isActive()} ? 'clickable' : 'clickable inactive-row'" th:each="user : ${page}"
-                th:onclick="'request(\'' + @{|/admin/users/${user.id}|}+ '\');'">
-                <td th:text="|${user.getFullName()}|"></td>
-                <td th:text="${user.login}"></td>
-                <td th:text="${user.email}"></td>
-                <td th:text="${user.role!=null ? user.role.getStringName() : ''}"></td>
-                <td th:text="|${#dates.format(user.dateLastOnline,'dd.MM.yyyy HH:mm')}|"></td>
-                <td th:text="${user.status.getStringName()}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="col s6 no-padding page-info">
-            <div sd:pagination-summary="">info</div>
-        </div>
     </div>
-    <div th:replace="fragments/pagination :: pagination"></div>
-</div>
-
+</main>
 </body>
 </html>
