--- a/src/main/resources/templates/fragments/card/user.html
+++ b/src/main/resources/templates/fragments/card/user.html
@@ -1,8 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       xmlns="http://www.w3.org/1999/xhtml">
-<div th:fragment="userFields(action)">
-    <div class="form-body big-form">
+<div th:fragment="userFields(action)" class="form-body big-form">
+    <div class="row">
         <div class="col s12">
             <nav class="breadcrumb-nav" th:if="${action == 'admin/users/'}">
                 <div class="nav-wrapper">
@@ -12,7 +12,7 @@
                     </div>
                 </div>
             </nav>
-            <nav class="breadcrumb-nav" th:if="${action == 'my/'}">
+            <nav class="breadcrumb-nav" th:if="${action == '/my'}">
                 <div class="nav-wrapper">
                     <div class="col s12">
                         <a th:href="@{/}" class="breadcrumb">Главная</a>
@@ -21,89 +21,85 @@
                 </div>
             </nav>
         </div>
+    </div>
         <div class="row row-eq-height">
-            <form id="user-form" class="form-horizontal col s7" style="padding-left: 0" method="PATCH"
-                  th:action="@{${action}}">
+            <form id="user-form" class="form-horizontal col s7" style="padding-left: 0" method="POST"
+                  th:action="${action}">
 
                 <input type="hidden" name="id" th:field="${user.id}"/>
 
-                <!--<div class="input-field" th:hidden="${action == 'my/'}"-->
-                     <!--sec:authorize="hasRole('ROLE_ADMIN')">-->
-                    <!--<select id="ldaps" th:field="${user.idLdap}" firstName="idLdap">-->
-                        <!--<option th:value="${null}">Внутренний</option>-->
-                        <!--<option th:each="r : ${ldaps}"-->
-                                <!--th:value="${r.id}"-->
-                                <!--th:text="${r.firstName}"></option>-->
-                    <!--</select>-->
-                    <!--<label for="ldaps">Метод авторизации</label>-->
-                <!--</div>-->
-
                 <fieldset>
                     <legend>Личная информация</legend>
-                    <div class="col s6">
-                        <div class="input-field">
-                            <input id="name" name="firstName" type="text"
-                                   class="required validate" maxlength="100"
-                                   th:field="${user.firstName}"/>
-                            <label for="name">Имя</label>
+                    <div class="row">
+                        <div class="col s6">
+                            <div class="input-field">
+                                <input id="name" name="firstName" type="text"
+                                       class="required validate" maxlength="100"
+                                       th:field="${user.firstName}"/>
+                                <label for="name">Имя</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="second-name" name="lastName" type="text"
+                                       maxlength="100"
+                                       th:field="${user.lastName}"/>
+                                <label for="second-name">Фамилия</label>
+                            </div>
                         </div>
-                        <div class="input-field">
-                            <input id="second-name" name="lastName" type="text"
-                                   maxlength="100"
-                                   th:field="${user.lastName}"/>
-                            <label for="second-name">Фамилия</label>
+                        <div class="col s6">
+                            <div class="input-field">
+                                <input id="login" name="login"
+                                       class="required validate" maxlength="20" type="text"
+                                       th:field="${user.login}"/>
+                                <label for="login">Логин</label>
+                            </div>
+                            <div class="input-field">
+                                <input id="email" name="email" class="required validate email" maxlength="150"
+                                       type="email"
+                                       th:field="${user.email}"/>
+                                <label for="email">Электронная почта</label>
+                            </div>
+                            <div class="input-field" th:hidden="${action == 'my/'}"
+                                 sec:authorize="hasRole('ROLE_ADMIN')">
+                                <select id="role" th:field="${user.role}" name="role">
+                                    <option th:value="${null}">Не назначена</option>
+                                    <option th:each="r : ${roles}"
+                                            th:value="${r.toString()}"
+                                            th:text="${r.getStringName()}"></option>
+                                </select>
+                                <label for="role">Роль</label>
+                            </div>
+                            <div class="input-field" th:hidden="${action == 'my/'}"
+                                 sec:authorize="hasRole('ROLE_ADMIN')">
+                                <input name="status" th:field="${user.status}" hidden/>
+                                <input id="status" th:value="${user.status.getStringName()}" readonly type="text"/>
+                                <label for="status">Статус</label>
+                            </div>
                         </div>
                     </div>
-                    <div class="col s6">
-                        <div class="input-field">
-                            <input id="login" name="login"
-                                   class="required validate" maxlength="20" type="text"
-                                   th:field="${user.login}"/>
-                            <label for="login">Логин</label>
-                        </div>
-                        <div class="input-field">
-                            <input id="email" name="email" class="required validate email" maxlength="150"
-                                   type="email"
-                                   th:field="${user.email}"/>
-                            <label for="email">Электронная почта</label>
-                        </div>
-                        <div class="input-field" th:hidden="${action == 'my/'}"
-                             sec:authorize="hasRole('ROLE_ADMIN')">
-                            <select id="role" th:field="${user.role}" name="role">
-                                <option th:value="${null}">Не назначена</option>
-                                <option th:each="r : ${roles}"
-                                        th:value="${r.toString()}"
-                                        th:text="${r.getStringName()}"></option>
-                            </select>
-                            <label for="role">Роль</label>
-                        </div>
-                        <div class="input-field" th:hidden="${action == 'my/'}"
-                             sec:authorize="hasRole('ROLE_ADMIN')">
-                            <input name="status" th:field="${user.status}" hidden/>
-                            <input id="status" th:value="${user.status.getStringName()}" readonly type="text"/>
-                            <label for="status">Статус</label>
+                    <div class="row">
+                        <div class="buttons-area col s12">
+                            <button onclick="UserController.block()"
+                                    th:if="${action == '/admin/users' && user.status != T(org.communis.javawebintro.enums.UserStatus).BLOCKED}"
+                                    type="button" class="waves-effect waves-light btn">Заблокировать
+                            </button>
+                            <button onclick="UserController.unblock()"
+                                    th:if="${action == '/admin/users' && user.status == T(org.communis.javawebintro.enums.UserStatus).BLOCKED}"
+                                    type="button" class="waves-effect waves-light btn">Разблокировать
+                            </button>
+                            <button type="submit" class="waves-effect waves-light btn">Cохранить</button>
                         </div>
                     </div>
-                    <div class="buttons-area col s12">
-                        <button onclick="UserController.block()"
-                                th:if="${action == 'admin/user/' && user.status != T(org.communis.javawebintro.enums.UserStatus).BLOCKED}"
-                                type="button" class="waves-effect waves-light btn">Заблокировать
-                        </button>
-                        <button onclick="UserController.unblock()"
-                                th:if="${action == 'admin/user/' && user.status == T(org.communis.javawebintro.enums.UserStatus).BLOCKED}"
-                                type="button" class="waves-effect waves-light btn">Разблокировать
-                        </button>
-                        <button type="submit" class="waves-effect waves-light btn">Cохранить</button>
-                    </div>
-                    <div class="col s12" id="data-success">
-                        <div th:replace="fragments/info :: successFragment"></div>
+                    <div class="row">
+                        <div class="col s12" id="data-success">
+                            <div th:replace="fragments/info :: successFragment"></div>
+                        </div>
                     </div>
                     <div th:replace="fragments/error :: errorModalFragment"></div>
                 </fieldset>
             </form>
 
-            <form id="password-form" class="form-horizontal col s5" style="padding-right: 0" method="PATCH"
-                  th:action="@{${action} + 'password'}">
+            <form id="password-form" class="form-horizontal col s5" style="padding-right: 0" method="POST"
+                  th:action="${action} + '/password'">
                 <input type="hidden" name="id" th:field="${user.id}"/>
                 <fieldset>
                     <legend>Смена пароля</legend>
@@ -127,7 +123,5 @@
                 </fieldset>
             </form>
         </div>
-    </div>
-
 </div>
 </html>
