--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,15 +6,13 @@
 </head>
 <body>
 <header th:replace="fragments/header :: header(main, user)"></header>
-<main>
-    <div class="container">
-        <div class="row">
-            <div class="col m12">
-                <div class="card-panel">
-                    <p class="flow-text center-align">
-                        Добро пожаловать *,..,*
-                    </p>
-                </div>
+<main class="container">
+    <div class="row">
+        <div class="col s12">
+            <div class="card-panel">
+                <p class="flow-text center-align">
+                    Добро пожаловать *,..,*
+                </p>
             </div>
         </div>
     </div>
