--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -1,20 +1,49 @@
 <html
         xmlns:th="http://www.thymeleaf.org"
         xmlns="http://www.w3.org/1999/xhtml">
-<div th:fragment="filter(addUrl, resetUrl, caption)" class="panel-heading">
-    <div class="row caption">
-        <h4 class="col s12" th:text="${caption}"></h4>
-    </div>
-    <div class="row row-eq-height">
-        <div class="input-dataField col m8">
-            <input type="text" name="search" maxlength="50" class="form-control" placeholder="Поиск"
-                   th:dataField="*{search}">
-        </div>
-        <div class="input-dataField col m4 filter-opts">
-            <button id="submit-btn" type="submit" class="waves-effect waves-light btn">Поиск</button>
-            <a th:href="@{${resetUrl}}" id="reset-btn" type="button" class="waves-effect waves-light btn btn-cancel">Сброс</a>
-            <a class="btn filter-btn"><i class="material-icons">filter_list</i></a>
-        </div>
+<div th:fragment="filter(addUrl, url)" class="panel-heading">
+
+    <div class="row">
+        <form th:action="${url}" method="get" th:object="${filter}">
+            <div class="input-dataField col s12 m12 l8">
+                <input type="text" name="search" maxlength="50" class="form-control" placeholder="Поиск"
+                       th:dataField="*{search}">
+
+                <div th:class="${'filter-content ' + (filter.isFilterExist() ? 'filter-open' : '')}">
+                    <div class="row">
+                        <div class="col s6">
+                            <div class="input-field select-form">
+                                <select th:field="*{role}">
+                                    <option th:value="${null}">Все</option>
+                                    <option th:each="r : ${roles}"
+                                            th:value="${r.toString()}"
+                                            th:text="${r.getStringName()}"></option>
+                                </select>
+                                <label>Роль</label>
+                            </div>
+                        </div>
+                        <div class="col s6">
+                            <div class="input-field select-form">
+                                <select th:field="*{status}">
+                                    <option th:value="${null}">Все</option>
+                                    <option th:each="s : ${statuses}"
+                                            th:value="${s.toString()}"
+                                            th:text="${s.getStringName()}"></option>
+                                </select>
+                                <label>Статус:</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="input-dataField col s12 m12 l4 filter-opts">
+                <button id="submit-btn" type="submit" class="waves-effect waves-light btn btn-small">Поиск</button>
+                <a th:href="@{${url}}" id="reset-btn" type="button"
+                   class="waves-effect waves-light btn btn-cancel btn-small">Сброс</a>
+                <a class="btn filter-btn btn-small"><i class="material-icons">filter_list</i></a>
+            </div>
+        </form>
     </div>
     <div th:if="${addUrl != null}" class="fixed-action-btn">
         <a th:href="@{${addUrl}}" class="btn-floating btn-large">
