+ categories management (add, edit, delete - via rest controller)

--- a/src/main/resources/templates/admin/user/add.html
+++ b/src/main/resources/templates/admin/user/add.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </nav>
-    <form id="user-add-form" class="form-horizontal row" method="POST" th:action="${url}">
+    <form id="user-add-form" class="form-horizontal row" method="POST" th:action="${'/admin/users'}">
         <input type="hidden" name="id" th:field="${user.id}"/>
         <fieldset>
             <legend>Данные пользователя</legend>
