--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -4,19 +4,19 @@
 
 <!-- обычный фильтр -->
 <div th:fragment="filter(url, addUrl)" class="row caption">
-    <form th:action="${url}" method="get" th:object="${filter}">
+    <form id="filter" th:action="${url}" method="get" th:object="${filter}">
         <div class="col s12 l8">
             <div th:replace="fragments/filter :: searchInput"></div>
         </div>
         <div th:replace="fragments/filter :: filterControls(${url})"></div>
     </form>
     <div th:if="${addUrl != null}"
-         th:replace="fragments/filter :: addButton(addUrl)"></div>
+         th:replace="fragments/filter :: addButton(${addUrl})"></div>
 </div>
 
 <!-- фильтр пользователя -->
 <div th:fragment="userFilter(url, addUrl)" class="row caption">
-    <form th:action="${url}" method="get" th:object="${filter}">
+    <form id="filter" th:action="${url}" method="get" th:object="${filter}">
         <div class="col s12 l8">
             <div th:replace="fragments/filter :: searchInput"></div>
 
@@ -48,7 +48,7 @@
         <div th:replace="fragments/filter :: filterControls(${url})"></div>
     </form>
     <div th:if="${addUrl != null}"
-         th:replace="fragments/filter :: addButton(addUrl)"></div>
+         th:replace="fragments/filter :: addButton(${addUrl})"></div>
 </div>
 
 <div th:fragment="searchInput" class="input-field col s12">
