--- a/src/main/resources/templates/admin/category/list.html
+++ b/src/main/resources/templates/admin/category/list.html
@@ -10,7 +10,7 @@
     <script th:src="@{/static/js/filter.js}"></script>
 </head>
 <body>
-<header th:replace="fragments/header :: header(user, admin)"></header>
+<header th:replace="fragments/header :: header(category, admin)"></header>
 <main>
     <div class="row">
         <div class="col s12">
@@ -25,14 +25,17 @@
                     <thead>
                     <tr>
                         <th>Название категории</th>
+                        <th>Дата создания</th>
+                        <th>Дата удаления</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:class="'clickable'"
                         th:each="category : ${page.items}"
-                        th:onclick="'request(\'' + @{|/admin/category/${category.id}|}+ '\');'">
+                        th:onclick="'request(\'' + @{|/admin/categories/${category.id}|}+ '\');'">
                         <td th:text="|${category.getName()}|"></td>
-
+                        <td th:text="|${category.getDateOpen()}|"></td>
+                        <td th:text="|${category.getDateClose()}|"></td>
                     </tr>
                     </tbody>
                 </table>
