CategoryController + views for simple users; ArticleService + repository; + UserRestController GET methods (user list and user by id); index page is now supposed to show recent articles

--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -269,9 +269,13 @@ td input {
     margin-bottom: 4px;
 }
 
-.buttons-area .btn:not(:last-of-type) {
-    margin-right: 20px;
+.buttons-area .btn {
+    margin: 4px;
 }
+
+/*.buttons-area .btn:not(:last-of-type) {
+    margin-right: 20px;
+}*/
 
 .for-file-wrap {
     position: initial !important;
