--- a/src/main/resources/templates/admin/user/edit.html
+++ b/src/main/resources/templates/admin/user/edit.html
@@ -13,7 +13,7 @@
 <body>
 <header th:replace="fragments/header :: header(user, admin)"></header>
 
-<div th:replace="fragments/card/user :: userFields('/admin/users')"></div>
+<main th:replace="fragments/card/user :: userFields('/admin/users')"></main>
 
 </body>
 </html>
