--- a/src/main/resources/templates/admin/category/edit.html
+++ b/src/main/resources/templates/admin/category/edit.html
@@ -12,44 +12,47 @@
 </head>
 <body>
 <header th:replace="fragments/header :: header(category, admin)"></header>
-<div class="form-body big-form">
-    <nav class="breadcrumb-nav">
-        <div class="nav-wrapper">
-            <div class="col s12">
-                <a th:href="@{/admin/categories}" class="breadcrumb">Реестр категорий</a>
-                <a th:href="@{'/admin/categories/' + ${category.id}}" th:text="'№' + ${category.id}" class="breadcrumb"></a>
-            </div>
-        </div>
-    </nav>
-    <form id="category-form" class="form-horizontal row" method="PATCH" th:action="${'/admin/categories'}">
-        <input type="hidden" name="id" th:field="${category.id}"/>
-        <fieldset>
-            <legend>Данные категории</legend>
-            <div class="col s6">
-                <div class="input-field">
-                    <input id="name" name="name" type="text"
-                           th:field="${category.name}" class="required validate" maxlength="100"/>
-                    <label for="name">Название</label>
+<main class="container">
+    <div class="card-panel">
+        <nav class="breadcrumb-nav">
+            <div class="nav-wrapper">
+                <div class="col s12">
+                    <a th:href="@{/admin/categories}" class="breadcrumb">Реестр категорий</a>
+                    <a th:href="@{'/admin/categories/' + ${category.id}}" th:text="'№' + ${category.id}"
+                       class="breadcrumb"></a>
                 </div>
             </div>
-            <div class="buttons-area col s12">
-                <button th:if="${category.dateClose == null}"
-                        type="button" class="waves-effect waves-light btn"
-                        onclick="CategoryController.delete()">
-                    Удалить
-                </button>
-                <button type="button" class="waves-effect waves-light btn"
-                        onclick="CategoryController.edit()">
-                    Сохранить
-                </button>
-            </div>
-            <div class="col s12">
-                <div th:replace="fragments/error :: errorFragment"></div>
-            </div>
-        </fieldset>
-    </form>
-</div>
+        </nav>
+        <form id="category-form" class="form-horizontal row" method="PATCH" th:action="${'/admin/categories'}">
+            <input type="hidden" name="id" th:field="${category.id}"/>
+            <fieldset>
+                <legend>Данные категории</legend>
+                <div class="col s6">
+                    <div class="input-field">
+                        <input id="name" name="name" type="text"
+                               th:field="${category.name}" class="required validate" maxlength="100"/>
+                        <label for="name">Название</label>
+                    </div>
+                </div>
+                <div class="buttons-area col s12">
+                    <button th:if="${category.dateClose == null}"
+                            type="button" class="waves-effect waves-light btn"
+                            onclick="CategoryController.delete()">
+                        Удалить
+                    </button>
+                    <button type="button" class="waves-effect waves-light btn"
+                            onclick="CategoryController.edit()">
+                        Сохранить
+                    </button>
+                </div>
+                <div class="col s12">
+                    <div th:replace="fragments/error :: errorFragment"></div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 
-<div th:replace="fragments/error :: errorModalFragment"></div>
+    <div th:replace="fragments/error :: errorModalFragment"></div>
+</main>
 </body>
 </html>
