--- a/src/main/resources/templates/category/view.html
+++ b/src/main/resources/templates/category/view.html
@@ -3,16 +3,27 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       th:with="title='Java Web Intro'">
+
 <head th:replace="fragments/head :: head(~{::title},~{::link}, ~{::script})">
-    <title>Java Web Intro</title>
+    <title>${category.name}</title>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/static/css/filter.css}"/>
+
 </head>
 <body>
-<header th:replace="fragments/header :: header(main, user)"></header>
+<header th:replace="fragments/header :: header(categories, user)"></header>
 <main class="container">
     <div class="card-panel">
-        <p class="flow-text center-align">
-            Добро пожаловать *,..,*
-        </p>
+        <nav class="breadcrumb-nav">
+            <div class="nav-wrapper">
+                <div class="col s12">
+                    <a th:href="@{/categories}" class="breadcrumb">Категории</a>
+                    <a th:href="@{'/categories/' + ${category.id}}" th:text="${category.name}"
+                       class="breadcrumb"></a>
+                </div>
+            </div>
+        </nav>
+        <div th:replace="fragments/filter :: filter('/categories/' + ${category.id})"></div>
     </div>
     <div class="card"
          th:each="article : ${page.items}"
@@ -33,8 +44,7 @@
     </div>
 
     <div sec:authorize="hasRole('ROLE_AUTHOR')"
-            th:replace="fragments/filter :: addButton('/articles/add')"></div>
-
+         th:replace="fragments/filter :: addButton('/articles/add')"></div>
 </main>
 </body>
 </html>
