--- a/src/main/resources/templates/user/my.html
+++ b/src/main/resources/templates/user/my.html
@@ -13,7 +13,7 @@
 
 <header th:replace="fragments/header :: header(my, user)"></header>
 
-<div th:replace="fragments/card/user :: userFields('/my')"></div>
+<main th:replace="fragments/card/user :: userFields('/my')"></main>
 
 <!--<div class="main-container">-->
     <!--<div class="main-content">-->
